# induction-labs

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  README.md  coldline_storage.json  devenv.nix  pyproject.toml  tmp.txt
numbers/: pyproject.toml
numbers/src/numbers/: __init__.py
repos/actioncollector/: .gitignore  README.md  actioncollector.spec  actioncollector_windows.spec  build_app.sh  devenv.nix  download_ffmpeg.py  pyproject.toml
repos/actioncollector/assets/: logo.icns
repos/actioncollector/src/actioncollector/: controller.py  execute_actions.py  main.py  models.py  password_filter.py  record_actions.py  utils.py
repos/actioncollector/src/actioncollector/playground/: cursor_movement.ipynb  debug_text_extractor.py  macos_profile.py  python_ffmpeg_mss.py  python_mss.py  test_action.py  test_action_video_alignment.py  testing.ipynb  testing2.ipynb  video_duration_analyzer.py  video_duration_by_logs.py
repos/modeling/: .dockerignore  .gitignore  Dockerfile  README.md  action_tokens.pt  depot.json  devenv.nix  docker-bake.hcl  docker-entrypoint.sh  fsdp_test.py  pyproject.toml  pytest.ini  test.py  test2.py  test3.py  test4.py  test_fsdp_basic.py
repos/modeling/docker/: base.dockerfile  eval.dockerfile  eve.dockerfile  mdl.dockerfile
repos/modeling/k8s/example/: huggingface-cache.yaml  vllm-ingress.yaml  vllm-service.yaml
repos/modeling/k8s/induction-labs/: README.md  cluster-queue-k3s.yaml  cluster-queue-lambda.yaml  cluster-queue.yaml  grafana.md  local-queue.yaml  mdl.yaml
repos/modeling/k8s/induction-labs/az/: az-pv.yaml  az-pvc.yaml  cluster-queue-k3s-az.yaml  local-queue-az.yaml
repos/modeling/k8s/induction-labs/dev-kueue/: cluster.yaml  local.yaml
repos/modeling/k8s/induction-labs/flavours/: cpu.yaml  gpu.yaml
repos/modeling/k8s/induction-labs/kueue-vis/: ingress.yaml
repos/modeling/k8s/jobs/: eve-az.yaml  eve.yaml  mdl.yaml
repos/modeling/k8s/rke2/: .gitignore  README.md  cuda-vectoradd.yaml  gpu-operator.yaml  hello-world.yaml
repos/modeling/src/: main.py
repos/modeling/src/modeling/: actor.py  experiment_state.py  head.py  initialization.py  k8s.py  main.py  queue.py  qwen_25o.py  train_llm.py
repos/modeling/src/modeling/callbacks/: profiler.py  tensorboard_handler.py  timer.py
repos/modeling/src/modeling/checkpoints/: load.py  save.py
repos/modeling/src/modeling/config/: __init__.py  config_test.py  data.py  distributed.py  serde.py  sweep.py  wandb.py
repos/modeling/src/modeling/data/: data_module.py  test_video.ipynb  text_train.py  trajectory_train.py  video_action.py
repos/modeling/src/modeling/distributed/: distributed.py  get_env.py  ray_head.py
repos/modeling/src/modeling/environments/: create_osworld_vms.py  eval_server.py  load_balance_server.py  osworld.py  osworld_endpoints.py  setup_vllm_server.sh  start_vllm.sh  start_vllm_multi_tmux.sh
repos/modeling/src/modeling/environments/agents/: uitars15.py  viz.ipynb
repos/modeling/src/modeling/eval/: cli.py  load_balance_server.py  vllm_server.py
repos/modeling/src/modeling/eve/: cli.py  load_balance_server.py  run_procs.py  vllm_server.py  vllm_utils.py  write_extra_files.py
repos/modeling/src/modeling/eve/clicks/: api_client.py  main.py  model_template.py  mp.py  (+2 more)
repos/modeling/src/modeling/experiments/: __init__.py
repos/modeling/src/modeling/k8s/: cli.py  context.py
repos/modeling/src/modeling/modules/: action_module.py  base_module.py  default_lit.py  qwen_25o.py  text_module.py
repos/modeling/src/modeling/types/: __init__.py  accelerator.py  attn_impl.py  dtype.py
repos/modeling/src/modeling/utils/: check_nans.py  class_property.py  cloud_path.py  dynamic_import.py  exp_module_path.py  fix_rng.py  flash_attention.py  flash_attention_utils.py  gen_id.py  get_attn_impl.py  git.py  image_utils.py  max_timeout.py  repro_dataloader.py  temp_env.py  tmpdir.py  typed_remote.py
repos/modeling/src/modeling/val/: cli.py  load_balance_server.py  vllm_server.py
repos/modeling/tests/: benchmark_fa.py  flash_attention.py  lightning_fdsp.py  qwen3.py  qwen_25o.py  simple_loop.py  test_cuda.cu  test_torch_basic.py
repos/modeling/tests/deterministic/: qwen_config.json  test_fsdp.py
repos/modeling/tests/fsdp2/: model.py  parallel.py  train.py
repos/synapse/: .gitignore  Dockerfile  devenv.nix  docker-bake.hcl  pyproject.toml
repos/synapse/src/synapse/: __init__.py  elapsed_timer.py  test.py  video_loader.py
repos/synapse/src/synapse/actions/: keyboard_press.py  keyboard_tokenizer.py  models.py  mouse_movements.py  process_actions.py
repos/synapse/src/synapse/combined/: combined_loader.ipynb  combined_loader.py
repos/synapse/src/synapse/elapsed_timer/: elapsed_timer.py  test.py
repos/synapse/src/synapse/mouse_keys/: mouse_keys.ipynb  mouse_keys.py
repos/synapse/src/synapse/qwen_omni_utils/: __init__.py  audio_process.py  video.py  video_process.py
repos/synapse/src/synapse/redis/: main.py
repos/synapse/src/synapse/trajectories/: README.md
repos/synapse/src/synapse/utils/: __init__.py  async_typer.py  file.py  logging.py
repos/synapse/src/synapse/video_loader/: action_vid.ipynb  cursor_movement.ipynb  file_utils.py  loader.py  main.py  process_actions.py  read_frames.py  render_frame.ipynb  render_frame.py  test_file_utils.py  types.py  typess.py  video.py  video_loader_test.py  video_utils.py  zarr_utils.py
repos/synth/: .gitignore  devenv.nix  out.jsonl  pyproject.toml
repos/synth/src/synth/: __init__.py  env.py  generate_keyboard.py  generate_mouse_movement.py  generate_mouse_movement_augmented.py  generate_mouse_movement_keyboard_joint.py  generators.py  recorder.py  run.py  testing.ipynb
repos/synth/src/synth/recordings/: action_models.py  gemini_process.py  gemini_tests.ipynb  image_utils.py  parse_actions.py  passive_clicks.py  process_sample.ipynb  random_test.ipynb  repair_dir.py  synth_captions.py  synth_captions_generated_samples.py  synth_captions_post_process.py  test_parse_actions.py  transform_coordinates.py
repos/synth/src/synth/trajectories/: rejection_sample.ipynb  rejection_sample_playground.ipynb
(+101 files in other folders)
