

[project]
name = "induction-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
[tool.uv]
# For modeling. See note there
# https://github.com/pytorch/pytorch/issues/153401#issuecomment-2881445494
override-dependencies = ["nvidia-nccl-cu12==2.26.2.post1"]
package = true

[tool.uv.workspace]
members = ["repos/*"]
# We need to exclude vllm as a workspace dep because it is dynamically versioned :/
exclude = ["repos/vllm", "repos/output", "repos/lingua", "k8s/", "repos/cue"]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.11.8"]


[tool.ruff]
fix = true
extend-exclude = [
    "repos/osworld",
    "repos/pynput",
    "repos/cue",
    "*.ipynb",
    "repos/modeling/tests",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "F",   # pyflakesi
    "B",   # bugbear
    "B9",
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
] # Enable isort rules


ignore = [
    # only relevant if you run a script with `python -0`,
    # which seems unlikely for any of the scripts in this repo
    "B011",
    # Leave it to the formatter to split long lines and
    # the judgement of all of us.
    "E501",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[project.scripts]
collect = "actioncollector.main:app"

[tool.setuptools.packages.find]
include = ["repos*"] # Only repos* are actually repos
