[project]
name = "numbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey Li", email = "jeffrey.dot.li@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "vllm>=0.8.5.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
