[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actioncollector"
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "U.N. Owen", email = "void@some.where" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "av>=14.4.0",
  "gcsfs>=2025.3.0",
  "google-cloud-storage>=3.1.0",
  "ipykernel>=6.29.5",
  "matplotlib>=3.10.3",
  "mss>=10.0.0",
  "opencv-python>=4.11.0.86",
  "pandas>=2.3.0",
  "pillow>=11.2.1",
  "pydantic>=2.11.5",
  "pynput",
  "tqdm>=4.67.1",
  "typer>=0.16.0",
]

[project.urls]
Documentation = "https://github.com/U.N. Owen/actioncollector#readme"
Issues = "https://github.com/U.N. Owen/actioncollector/issues"
Source = "https://github.com/U.N. Owen/actioncollector"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/actioncollector tests}"

[tool.coverage.run]
source_pkgs = ["actioncollector", "tests"]
branch = true
parallel = true
omit = ["src/actioncollector/__about__.py"]

[tool.coverage.paths]
actioncollector = [
  "src/actioncollector",
  "*/actioncollector/src/actioncollector",
]
tests = ["tests", "*/actioncollector/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.uv.sources]
pynput = { path = "../pynput" }

[project.scripts]
collect = "actioncollector.main:app"
