[project]
name = "synapse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Li", email = "30177086+MonliH@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "gcsfs>=2025.3.0",
    "google-cloud-storage>=3.1.0",
    "numcodecs>=0.16.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "numpy",
    "pydantic>=2.11.5",
    "redis>=6.2.0",
    "smart-open[gcp]>=7.1.0",
    "tensorstore>=0.1.75",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "zarr>=3.0.8",
]

[project.scripts]
synapse = "synapse:main"

[tool.uv]
default-groups = ["dev", "qwen-omni-utils"]


[dependency-groups]
dev = ["ipython>=9.3.0"]
qwen-omni-utils = [
    "requests>=2.32.3",
    "av>=14.4.0",
    # "librosa>=0.11.0",
    "decord>=0.6.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
