[project]
name = "synapse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Li", email = "30177086+MonliH@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "gcsfs>=2025.3.0",
    "google-cloud-storage>=3.1.0",
    "numcodecs>=0.16.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "numpy",
    "pydantic>=2.11.5",
    "redis>=6.2.0",
    "smart-open[gcp]>=7.1.0",
    "tensorstore>=0.1.75",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "zarr>=3.0.8",
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.3",
    "av>=14.4.0",
    "pytest>=8.4.1",
]

[project.scripts]
synapse = "synapse:main"

[tool.uv]
default-groups = ["dev"]

# [tool.uv.sources]
# video-reader-rs = { git = "https://github.com/gcanat/video_reader-rs" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
    "pyzmq>=27.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
