[project]
name = "synth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Li", email = "li.jonathan42@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pillow>=11.2.1",
    "synapse",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
synapse = { workspace = true }

[project.scripts]
synth = "synth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
