[project]
name = "synth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jonathan Li", email = "li.jonathan42@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "gcsfs>=2025.3.0",
    "google-genai>=1.28.0",
    "jsonlines>=4.0.0",
    "litellm[proxy]>=1.75.0",
    "numpy",
    "openai>=1.90.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.1",
    "synapse",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
synapse = { workspace = true }

[project.scripts]
synth = "synth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["gcsfs>=2025.3.0", "ipykernel>=6.29.5", "nltk>=3.9.1"]
